# pybiss

./: .gitignore  License  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/: adpu.py  app.py  btrust_cards.py  cert_parser.py  config.py  dashboard.py  desktop_ui.py  detector.py  download_assets.py  hardware.py  locale.py  mscapi.py  pkcs11_funcs.py  pkcs11_types.py  sc_apdu.py  sc_ffi.py  sc_types.py  server.py  server_ui.py  service.py  spkac.py  tkinter_mods.py  tui.py  ui_bridge.py  verifier.py
tests/: mocks.py  test_btrust_cards.py  test_cert_parser.py  test_detector.py  test_hardware.py  test_mscapi.py  test_pkcs11_funcs.py  test_pkcs11_types.py  test_sc_apdu.py  test_sc_types.py  test_server.py  test_service.py  test_spkac.py  test_verifier.py
